docs/envoy/v1.11.0/_sources/api-v2/config/filter/http/dynamic_forward_proxy/v2alpha/dynamic_forward_proxy.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/dynamic_forward_proxy/v2alpha/dynamic_forward_proxy.proto:

Dynamic forward proxy
=====================


.. _envoy_api_msg_config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig:

config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig
-------------------------------------------------------------

`[config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/http/dynamic_forward_proxy/v2alpha/dynamic_forward_proxy.proto#L17>`_

Configuration for the dynamic forward proxy HTTP filter. See the :ref:`architecture overview
<arch_overview_http_dynamic_forward_proxy>` for more information.

.. code-block:: json

  {
    "dns_cache_config": "{...}"
  }

.. _envoy_api_field_config.filter.http.dynamic_forward_proxy.v2alpha.FilterConfig.dns_cache_config:

dns_cache_config
  (:ref:`config.common.dynamic_forward_proxy.v2alpha.DnsCacheConfig <envoy_api_msg_config.common.dynamic_forward_proxy.v2alpha.DnsCacheConfig>`, *REQUIRED*) The DNS cache configuration that the filter will attach to. Note this configuration must
  match that of associated :ref:`dynamic forward proxy cluster configuration
  <envoy_api_field_config.cluster.dynamic_forward_proxy.v2alpha.ClusterConfig.dns_cache_config>`.
  
  

